--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/node": "^20.14.2",
         "express": "^4.17.1",
+        "typescript": "^5.4.5",
         "ws": "^8.2.0"
     },
     "devDependencies": {
