--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/node": "^20.14.2",
+        "dotenv": "^16.4.5",
         "express": "^4.17.1",
         "typescript": "^5.4.5",
         "ws": "^8.2.0"
